--- a/Balemuya/vercel.json
+++ b/Balemuya/vercel.json
@@ -2,18 +2,15 @@
   "version": 2,
   "builds": [
     {
-      "src": "balemuya/wsgi.py",
+      "src": "Balemuya/wsgi.py",
       "use": "@vercel/python",
-      "config": { "maxLambdaSize": "15mb", "runtime": "python3.11" }
+      "config": { "maxLambdaSize": "50mb", "runtime": "python3.11" }
     }
   ],
-  "env": {
-    "PYTHON_VERSION": "3.9"
-  },
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "balemuya/wsgi.py"
+      "dest": "Balemuya/wsgi.py"
     },
     {
       "src": "/static/(.*)",
