--- a/Balemuya/vercel.json
+++ b/Balemuya/vercel.json
@@ -4,7 +4,10 @@
     {
       "src": "Balemuya/wsgi.py",
       "use": "@vercel/python",
-      "config": { "maxLambdaSize": "50mb", "runtime": "python3.11" }
+      "config": {
+        "maxLambdaSize": "50mb",
+        "runtime": "python3.9"
+      }
     }
   ],
   "routes": [
